...
                android:layout_height="wrap_content"
                android:hint="@string/ai_chat_input_hint"
                app:boxBackgroundMode="none"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_ai_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:imeOptions="actionSend"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLines="6"
...
